tests/baselines/reference/jsFileClassPropertyType2.errors.txt
tests/cases/compiler/bar.ts(1,18): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== tests/cases/compiler/foo.js (0 errors) ====
    class C {
        constructor() {
          /** @type {number[]}*/
          this.p = [];
      }
    }
    
==== tests/cases/compiler/bar.ts (1 errors) ====
    (new C()).p.push("string");
                     ~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    